2005-04-28 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b15

	Fix: More spelling and validation fixes by Gaile in base.css

	Fix: Initialtab was not correct set in edit_apperance

	Fix: When editing properties via startpage the properties page broke after 2 apply.

2005-04-27 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b14

	* Fix: htmlMimeMail.php was checked in with the wrong line endings
	  which was causing the CVS build to fail on Windows.

2005-04-25 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b13

	* Fix: typos

	* Fix: Missing quoting in colorpicker.php

2005-04-25 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b12

	* Fix: css and html fixes. (found by Gaile)

2005-04-22 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b11

	* New: Added nice colorpicker for easy color setting.
	  Note: Coded and pictures were taken from the Horde Project (http://www.horde.org)
	
	* Fix: Use of depricated var in html/userData.inc

	* Change: Added hidden fields for sectionTabs that contains the current tab.
		  This enables us to highlight it, when reloading the page.

	* Change: Little Layout change in layout/commentdraw.inc

	* Change: former solution for Jmullan, broke HTML validality.
		  New solution: tweaked getPhotoTag() to accept attrs.
		
2005-04-21 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b10

	* Fix: eCard setting from setup was not used for new albums (thanks Judith)

	* Change: Added tabindex order in eCard Form and focus on first field.

	* Change: Admins can now created directly as new user.

	* New: New flag for user to allow or disallow them to change their password.
	  Note: User version bump. "Old" user automatically get this to true.

	* Change: Stay in modify user view after having modified a user.

	* New: added id="galleryImage" to img tags in view_photo (for jmullan)

	* Fix: View Comments for not loggedIn User where displayed even if setting i setup was off,
	       but everybody is allowed to see comments.
