@@ -1,3 +1,8 @@
+2005-05-01 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b16
+
+	* Change: Added 'nobody' as default permission set.
+ 	Thanks to Andrew A. Chen for this idea.
+
 2005-04-28 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b15
 
 	Fix: More spelling and validation fixes by Gaile in base.css
